--- a/wuanlifeMobile/css/wuan.css
+++ b/wuanlifeMobile/css/wuan.css
@@ -186,7 +186,7 @@ form h3{
 
 /* framework */
 .framework-content{
-    margin-top: 8rem;
+    margin-top: 8.4rem;
 }
 .delete-float{
     zoom: 1;
@@ -203,7 +203,7 @@ section>.delete-float>*{
     margin-top: 0.5rem;
 }
 section>.delete-float h2{
-    margin-top: 1.1rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     margin-left: 1.4rem;
     font-size: 1.8rem;
@@ -214,7 +214,7 @@ section>.delete-float>*:nth-last-child(1){
 article {
     padding: 1rem 1.2rem;
     background-color: #fff;
-    border: .2rem solid #e7e6e6;
+    border: .1rem solid #e7e6e6;
     margin: 1rem;
 
 }
@@ -272,7 +272,7 @@ article>div{
     margin: .5rem;
     padding: .5rem 1rem;
     background-color: #fff;
-    border: .2rem solid #e7e6e6;
+    border: .1rem solid #e7e6e6;
 }
 .top-ic li:nth-child(1){
     margin-top: 0;
@@ -356,6 +356,9 @@ article>div{
     visibility:hidden;
 }
 /* text */
+.text-16{
+    font-size: 1.6rem;
+}
 .text-15{
     font-size: 1.5rem;
 }
